Migrate gulpfile to es2015

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Skeletor!</h1>
+      <h1>Skeletor :D</h1>
     </div>
     <script src="js/script.js"></script>
   </body>
